# newen_pipeline

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
airflow/: Dockerfile
airflow/config/: airflow.cfg
airflow/dags/: scraper_tiktok_web.py
app/src/extract/: get_config.py  get_cookies.py  scraper_tiktokweb_post.py  xbogus_pure_py.py
app/src/transform/: transform_tiktokpost.py
app/src/utils/: gc_storage.py
configs/: airflow.cfg  gcp.yaml  link_request_tiktok_photo.txt  secrets.yaml  service_account.json
configs/cookies/: tiktok_headers.json
configs/tiktok/2025-10-20/2025-10-20/: config_tiktokweb.tsv  tiktok_share_urls.yaml
configs/tiktok/2025-10-20/2025-10-21/: config_tiktokweb.tsv  tiktok_share_urls.yaml
configs/tiktok/2025-10-20/2025-10-22/: config_tiktokweb.tsv  tiktok_share_urls.yaml
configs/tiktok/2025-10-20/2025-10-23/: config_tiktokweb.tsv  tiktok_share_urls.yaml
configs/tiktok/2025-10-20/2025-10-24/: config_tiktokweb.tsv  tiktok_share_urls.yaml
data_tiktok_video/2025-10-20/2025-10-21/html/video/: 7560594761854274847.html
jobs/tiktok/: get_config.py  scraper_tiktokweb_post.py  transform_tiktokpost.py
src/extract/: get_cookies.py  xgnarly_pure_py.py
src/orchestrate/: automate_pipeline.py  newen_prefect_workflow.py  run_automate_pipeline.bat
src/test/: z_code_main.ipynb
src/tiktokweb/: __init__.py  set_proxy.py  tiktokweb_helper.py
src/transform/: transform_tiktokpost.py
src/upload/: upload_tiktokpost.py
src/utils/: gc_bigquery.py  helper.py  set_proxy.py  solve_captchas.py  tiktok_contents.py
utils/: __init__.py  driver_helper.py  functions.py  gc_bigquery.py  gc_storage.py  gcs_bq_uploader.py  helper.py  proxy_helper.py  tiktok_seleniumsolver.py  tin_proxy.py
